<resources>
    <string name="app_name">Task_TMDB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail">Detail</string>
    <string name="desc">Desc</string>
    <string name="home">Home</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top rated</string>
    <string name="up_coming">Up coming</string>
    <string name="language">Language</string>
    <string name="reuting">Reuting</string>
    <string name="duration">Duration</string>
    <string name="release_data">Release Data</string>
    <string name="todo">TODO</string>
</resources>